# FSOT-2.1-Neural

./: .gitignore  BRAIN_PATH.md  CLIMB.md  FSOT_REPRODUCIBLE_METHODOLOGY.md  GITHUB_PUBLISH.md  KAGGLE_AND_LICENSING.md  KAGGLE_RUNBOOK.md  LICENSE  LONG_CONTEXT.md  MISSION.md  NOTICE  README.md  RESULTS.md  ROADMAP.md  SOTA_FRONTS.md  VERIFICATION.md  pyproject.toml  requirements.txt  run_archive_pin.py  run_bio_validate.py  run_brain_design.py  run_chew_query.py  run_class_ephys.py  run_climb.py  run_failure_probe.py  run_forward_stack.py  run_genetic_bio.py  run_gpu_consensus.py  run_gpu_neuron.py  run_language_loop.py  run_long_context.py  run_multi_dataset.py  run_obsidian_brain.py  run_scalpel_rates.py  run_sota_fronts.py
data/: 64_codon_trinary_map.txt  itu_morse.json  neuro_failure_boundaries.json
docs/: BARE_METAL_IO.md  BIO_ACCURACY.md  EFFICIENCY_DOCTRINE.md  EMBODIMENT_ROADMAP.md  FORMAL_VERIFICATION_CHOICE.md  FORMULAS.md  LEARNING_ALIGNMENT.md  SCALPEL_RATE_SYSTEM.md  STAGE_ZIG_NEURON_STEP.md  THESIS.md  TRINARY_BARE_METAL.md
formal/: FSOTNeural.lean  README.md  lakefile.lean
fsot_nuron/: __init__.py  allen_data.py  archive_pin.py  bio_metrics.py  bio_report_card.py  brain_architecture.py  calibrate.py  cell_types.py  chemical_codon.py  class_ephys.py  deep_readout.py  eeg_bands.py  eeg_loader.py  eeg_sources.py  emotions_eeg.py  failure_boundaries.py  genetic_genotype.py  genetic_network.py  gpu_consensus.py  language_loop.py  learning_bands.py  literature_chew.py  modes.py  morse_itu.py  multi_dataset.py  neuron_batch.py  obsidian_brain.py  paths.py  pd_eeg_depth.py  reservoir.py  scalar.py  scale_learning.py  scale_sweep.py  scalpel_rate.py  seeds.py  thesis_ledger.py  validate.py  (+3 more)
(+70 files in other folders)
